# Karaoke

./: .gitignore  LICENSE  README.md  karaoke.ipynb  lyrics_aligner.py  main.py  pyproject.toml
tests/: test_lyrics_aligner.py
