[project]
name = "karaoke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "demucs>=4.0.1",
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "rich>=13.9.4",
    "simpleaudio>=1.0.4",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
]

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = ["*.ipynb_checkpoints"]
