[project]
name = "karaoke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "demucs>=4.0.1",
    "lyricsgenius>=3.2.0",
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "simpleaudio>=1.0.4",
    "tinytag>=2.0.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
]

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = ["*.ipynb_checkpoints"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
]
